--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt_file",
   "version": "1.0.0",
-  "description": "no description",
+  "description": "testing grunt",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,19 +10,19 @@
     "type": "git",
     "url": "git+https://github.com/tutuns/grunt_file.git"
   },
-  "author": "tutun shikari",
+  "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/tutuns/grunt_file/issues"
   },
+  "dependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-connect": "^0.9.0",
+    "grunt-contrib-jshint": "^0.11.0",
+    "grunt-contrib-watch": "^0.6.1"
+  },
   "homepage": "https://github.com/tutuns/grunt_file#readme",
   "devDependencies": {
-    "grunt": "^1.0.1",
-    "grunt-contrib-concat": "^1.0.1",
-    "grunt-contrib-jshint": "^1.1.0",
-    "grunt-contrib-sass": "^1.0.0",
-    "grunt-contrib-watch": "^1.0.0",
-    "jshint-stylish": "^2.2.1"
+    "grunt": "^0.4.5"
   }
 }
-//test
