addded grunt-string-replace

--- a/package.json
+++ b/package.json
@@ -31,3 +31,4 @@
 // install node-bourbon
 // install grunt-sass
 //install and use grunt-sass uninstall grunt-contrib-sass for node-bourbon
+// install grunt-string-replace
