--- a/package.json
+++ b/package.json
@@ -32,3 +32,4 @@
 // install grunt-sass
 //install and use grunt-sass uninstall grunt-contrib-sass for node-bourbon
 // install grunt-string-replace
+//install grunt-postcss
